--- a/.env.example
+++ b/.env.example
@@ -3,4 +3,6 @@ LANGSMITH_PROJECT=new-agent
 AGENT_CONFIG_PATH=resource/config.json
 
 # Add API keys for connecting to LLM providers, data sources, and other integrations here
-ANTHROPIC_API_KEY=
+GOOGLE_API_KEY=changeme if used
+ANTHROPIC_API_KEY=changeme if used
+BRAVE_SEARCH_API_KEY=changeme if used
