add API endpoints

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,8 @@ dependencies = [
     "nltk (>=3.9.1,<4.0.0)",
     "langgraph-cli (>=0.2.8,<0.2.10)",
     "rank-bm25 (>=0.2.2,<0.2.10)",
+    "psycopg2 (>=2.9.5,<=2.9.10)",
+    "sqlmodel (>=0.0.20,<=0.0.24)"
 ]
 
 
