--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,30 +1,34 @@
 [project]
-name = "rag-contextual"
+name = "rag-agent"
 version = "0.1.0"
 description = "An agent is built by LangGraph and desgin based on RAG-Contextual."
 authors = [
-    {name = "BangNhatLe",email = "bangle37568@gmail.com"}
+    { name = "BangNhatLe", email = "bangle37568@gmail.com" }
 ]
-license = {text = "MIT"}
-readme = "README.md"
-requires-python = "3.11"
+license = { text = "MIT" }
+requires-python = ">=3.12,<4.0"
 dependencies = [
-    "langgraph (>=0.4.5,<0.5.0)",
-    "jsonpickle (>=4.0.5,<5.0.0)",
+    "jsonpickle (>=4.1.0,<5.0.0)",
+    "rank-bm25 (>=0.2.2,<0.3.0)",
+    "psycopg2 (>=2.9.10,<3.0.0)",
+    "sqlmodel (>=0.0.24,<0.0.25)",
+    "nltk (>=3.9.1,<4.0.0)",
+    "torchvision (>=0.22.0,<0.23.0)",
     "duckduckgo-search (>=8.0.2,<9.0.0)",
     "langchain-community (>=0.3.24,<0.4.0)",
-    "langchain-anthropic (>=0.3.13,<0.4.0)",
-    "langchain-ollama (>=0.3.3,<0.4.0)",
-    "ollama (>=0.4.8,<0.5.0)",
-    "langchain-google-genai (>=2.1.4,<3.0.0)",
+    "langchain-google-genai (>=2.1.5,<3.0.0)",
     "langchain-chroma (>=0.2.4,<0.3.0)",
-    "nltk (>=3.9.1,<4.0.0)",
-    "langgraph-cli (>=0.2.8,<0.2.10)",
-    "rank-bm25 (>=0.2.2,<0.2.10)",
-    "psycopg2 (>=2.9.5,<=2.9.10)",
-    "sqlmodel (>=0.0.20,<=0.0.24)"
+    "langchain-ollama (>=0.3.3,<0.4.0)",
+    "ollama (>=0.4.9,<0.5.0)",
+    "langgraph (>=0.4.7,<0.5.0)",
+    "langgraph-cli (>=0.2.10,<0.3.0)",
 ]
 
+[tool.poetry]
+package-mode = false
+
+[tool.poetry.group.dev.dependencies]
+pytest = "^8.3.5"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
