Remove langgraph-cli and adjust the project to use FastAPI primarily

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
 # To separate your traces from other application
 LANGSMITH_PROJECT=new-agent
+LANGSMITH_API_KEY=
+LOG_LEVEL=INFO
 AGENT_CONFIG_PATH=resource/config.json
 
 # Add API keys for connecting to LLM providers, data sources, and other integrations here
