--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ LANGSMITH_PROJECT=new-agent
 LANGSMITH_API_KEY=
 LOG_LEVEL=INFO
 AGENT_CONFIG_PATH=resource/config.json
+SAVE_IMAGE_DIRECTORY=resource/images
 
 # Add API keys for connecting to LLM providers, data sources, and other integrations here
 GOOGLE_API_KEY=changeme if used
