--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,7 @@ LANGSMITH_API_KEY=
 LOG_LEVEL=INFO
 AGENT_CONFIG_PATH=resource/config.json
 SAVE_IMAGE_DIRECTORY=resource/images
+SAVE_DOCUMENT_DIRECTORY=resource/documents
 
 # Add API keys for connecting to LLM providers, data sources, and other integrations here
 GOOGLE_API_KEY=changeme if used
