--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ dependencies = [
     "langgraph (>=0.4.7,<0.5.0)",
     "langchain-huggingface (>=0.2.0,<0.3.0)",
     "fastapi[standard] (>=0.115.9,<0.116.0)",
+    "pypdf (>=5.6.0,<6.0.0)",
 ]
 
 [tool.poetry]
