--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,9 +19,9 @@ dependencies = [
     "langchain-google-genai (>=2.1.5,<3.0.0)",
     "langchain-chroma (>=0.2.4,<0.3.0)",
     "langgraph (>=0.4.7,<0.5.0)",
-    "langgraph-cli (>=0.2.10,<0.3.0)",
     "langchain-huggingface (>=0.2.0,<0.3.0)",
     "fastapi[standard] (>=0.115.9,<0.116.0)",
+    "langgraph-cli[inmem] (>=0.2.10,<0.3.0)",
 ]
 
 [tool.poetry]
