--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,6 @@ requires-python = ">=3.12,<4.0"
 dependencies = [
     "jsonpickle (>=4.1.0,<5.0.0)",
     "rank-bm25 (>=0.2.2,<0.3.0)",
-    "psycopg2 (>=2.9.10,<3.0.0)",
     "sqlmodel (>=0.0.24,<0.0.25)",
     "nltk (>=3.9.1,<4.0.0)",
     "torchvision (>=0.22.0,<0.23.0)",
@@ -22,6 +21,8 @@ dependencies = [
     "langchain-huggingface (>=0.2.0,<0.3.0)",
     "fastapi[standard] (>=0.115.9,<0.116.0)",
     "pypdf (>=5.6.0,<6.0.0)",
+    "langgraph-checkpoint-postgres (>=2.0.21,<3.0.0)",
+    "psycopg[binary,pool] (>=3.2.9,<4.0.0)",
 ]
 
 [tool.poetry]
