--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ LOG_LEVEL=INFO
 AGENT_CONFIG_PATH=resource/config.json
 SAVE_IMAGE_DIRECTORY=resource/images
 SAVE_DOCUMENT_DIRECTORY=resource/documents
+CACHE_DIR=resource/cache
 
 IMAGE_RECOGNIZER_MAX_WORKERS=4
 
