--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,8 @@ dependencies = [
     "pypdf (>=5.6.0,<6.0.0)",
     "langgraph-checkpoint-postgres (>=2.0.21,<3.0.0)",
     "psycopg[binary,pool] (>=3.2.9,<4.0.0)",
+    "docx2txt (>=0.9,<0.10)",
+    "langchain-experimental (>=0.3.4,<0.4.0)",
 ]
 
 [tool.poetry]
