--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ dependencies = [
     "psycopg[binary,pool] (>=3.2.9,<4.0.0)",
     "docx2txt (>=0.9,<0.10)",
     "langchain-experimental (>=0.3.4,<0.4.0)",
+    "simsimd (>=6.4.9,<7.0.0)",
 ]
 
 [tool.poetry]
