--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ dependencies = [
     "simsimd (>=6.4.9,<7.0.0)",
     "opentelemetry-proto (>=1.34.1,<2.0.0)",
     "langchain-mcp-adapters (>=0.1.8,<0.2.0)",
+    "dependency-injector (>=4.48.1,<5.0.0)",
 ]
 
 [tool.poetry]
