--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,13 @@
-# To separate your traces from other application
-LOG_LEVEL=INFO
-AGENT_CONFIG_PATH=resource/config.json
-SAVE_IMAGE_DIRECTORY=resource/images
-SAVE_DOCUMENT_DIRECTORY=resource/documents
-CACHE_DIR=resource/cache
+DB_NAME=change me
+DB_USER=change me
+DB_PASSWORD=change me
 
+LOG_LEVEL=DEBUG
+AGENT_CONFIG_PATH=change me
+SAVE_IMAGE_DIRECTORY=change me
+SAVE_DOCUMENT_DIRECTORY=change me
+CACHE_DIR=change me
 IMAGE_RECOGNIZER_MAX_WORKERS=4
+DOWNLOAD_GENERATOR_SECRET_KEY=your-super-secret-key-change-in-production
 
-# Add API keys for connecting to LLM providers, data sources, and other integrations here
-GOOGLE_API_KEY=changeme if used
+GOOGLE_API_KEY=change me
