--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ dependencies = [
     "opentelemetry-proto (>=1.34.1,<2.0.0)",
     "langchain-mcp-adapters (>=0.1.8,<0.2.0)",
     "dependency-injector (>=4.48.1,<5.0.0)",
+    "langchain-docling (>=1.0.0,<2.0.0)",
 ]
 
 [tool.poetry]
