refactor code and fix bugs

--- a/.env.example
+++ b/.env.example
@@ -3,11 +3,10 @@ DB_USER=change me
 DB_PASSWORD=change me
 
 LOG_LEVEL=DEBUG
-AGENT_CONFIG_PATH=change me
-SAVE_IMAGE_DIRECTORY=change me
-SAVE_DOCUMENT_DIRECTORY=change me
+AGENT_CONFIG_DIR=change me
+SAVE_FILE_DIR=change me
 CACHE_DIR=change me
-IMAGE_RECOGNIZER_MAX_WORKERS=4
+MAX_WORKERS=4
 DOWNLOAD_GENERATOR_SECRET_KEY=your-super-secret-key-change-in-production
 
 GOOGLE_API_KEY=change me
