--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-DB_NAME=change me
-DB_USER=change me
-DB_PASSWORD=change me
+POSTGRES_DATABASE=change me
+POSTGRES_USER=change me
+POSTGRES_PASSWORD=change me
 
 LOG_LEVEL=DEBUG
 AGENT_CONFIG_DIR=change me
