--- a/.env.example
+++ b/.env.example
@@ -2,11 +2,11 @@ POSTGRES_DATABASE=change me
 POSTGRES_USER=change me
 POSTGRES_PASSWORD=change me
 
-LOG_LEVEL=DEBUG
+LOG_LEVEL= available value: INFO, WARNING, DEBU
 AGENT_CONFIG_DIR=change me
-SAVE_FILE_DIR=change me
-CACHE_DIR=change me
-MAX_WORKERS=4
+CACHE_DIR= default in /rag_agent/cache, provide it if you want to change the path.
+SAVE_FILE_DIR= default in /rag_agent/resource, provide it if you want to change the path.
+MAX_WORKERS= value to initialize thread pool, default 4
 DOWNLOAD_GENERATOR_SECRET_KEY=your-super-secret-key-change-in-production
 
 GOOGLE_API_KEY=change me
