--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,12 +16,13 @@ dependencies = [
     "langchain-community (>=0.3.24,<0.3.26)",
     "langchain-google-genai (>=2.1.5,<2.1.8)",
     "langchain-chroma (>=0.2.4,<0.2.6)",
-    "langgraph (>=0.4.7,<0.4.9)",
     "langchain-huggingface (>=0.2.0,<0.3.0)",
+    "langchain-experimental (==0.3.4)",
+    "langgraph (==0.4.7)",
+    "langgraph-prebuilt (==0.5.2)",
+    "langgraph-checkpoint-postgres (==2.0.21)",
     "fastapi[standard] (>=0.115.9,<0.115.11)",
-    "langgraph-checkpoint-postgres (>=2.0.21,<2.0.22)",
     "psycopg[binary,pool] (>=3.2.9,<3.3.0)",
-    "langchain-experimental (>=0.3.4,<0.3.5)",
     "simsimd (>=6.4.9,<6.5.0)",
     "opentelemetry-proto (>=1.34.1,<1.35.0)",
     "langchain-mcp-adapters (>=0.1.8,<0.2.0)",
